Correcting Padding on Mobile
Halfing the padding for smaller screens, lets more content be displayed

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ section p {
 @media screen and (max-width: 50em) {
   section {
     font-size: 50%;
-    padding: 6em 6.6em;
+    padding: 3em 3.3em;
   }
 }
 
